tests/transpiler/x/hs/map_index.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_index.hs:6:25: error:
    • No instance for (Num String) arising from the literal ‘1’
    • In the expression: 1
      In the expression: ("a", 1)
      In the first argument of ‘Map.fromList’, namely
        ‘[("a", 1), ("b", 2)]’
  |
6 | m = Map.fromList [("a", 1), ("b", 2)]
  |                         ^
